try to fix horizontal scroll

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -51,7 +51,7 @@ body {
   font-size: 1rem;
   color: white;
   text-decoration: none;
-  margin: 1rem;
+  //margin: 1 rem;
 
   border-radius: 0.5rem;
 
